--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 <script type="">
 	window.alert("Привет мир!");
 </script>
+<style type="text/css">
+	body{
+		background-color: #000000;
+		color: #ffffff;
+	}	
+</style>
 </body>
 </html>
