--- a/index.html
+++ b/index.html
@@ -4,18 +4,34 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BOT44HQ</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-<h1>Привет мир</h1>
+
+<div class="main mx-2">
+	
+</div>
+
+</body>
+
 <script type="">
-	window.alert("Привет мир!");
+	//window.alert("Привет мир!");
 </script>
+
+
 <style type="text/css">
 	body{
 		font-size: 2em;
 		background-color: #000000;
 		color: #ffffff;
 	}	
+	.main{
+		background-color: #0f0f0f;
+		color:#ffffff;
+		border-color: #ff0000;
+		border-radius: 20pt;
+		
+	}
 </style>
-</body>
+
 </html>
