--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BOT44HQ</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
 
-<div class="main mx-2">
-	
+<div class="main mx-5 pt-5">
+	<header class="header fixed-top p-2 mx-5">
+		<p class="mylogo logo">Telegram Web Apps</p>
+		<a class="btn" href="scripts/1.html">Script 1</a>
+		<a class="btn" href="scripts/2.html">Script 2</a>
+		<a class="btn" href="scripts/3.html">Script 3</a>
+		<a class="btn" href="scripts/4.html">Script 4</a>
+		<a class="btn" href="scripts/5.html">Script 5</a>
+	</header>
 </div>
 
 </body>
@@ -17,21 +25,4 @@
 <script type="">
 	//window.alert("Привет мир!");
 </script>
-
-
-<style type="text/css">
-	body{
-		font-size: 2em;
-		background-color: #000000;
-		color: #ffffff;
-	}	
-	.main{
-		background-color: #0f0f0f;
-		color:#ffffff;
-		border-color: #ff0000;
-		border-radius: 20pt;
-		
-	}
-</style>
-
 </html>
