New portfolio front-end code

--- a/index.html
+++ b/index.html
@@ -8,17 +8,85 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
+<!-- 	<header class="header fixed-top px-5 p-2">
+		<a class="mylogo logo" href="#">Kolomiets Kirill</a>
+		<a class=" btn" href="https://t.me/hqwskq">Telegram</a>
+		<a class=" btn" href="tel:+79210135075">+7-921-013-50-75</a>
+		<a class=" btn" href="mailto:kolosoek86@gmail.com">kolosoek86@gmail.com</a>
 
-<div class="main mx-5 pt-5">
-	<header class="header fixed-top p-2 mx-5">
-		<p class="mylogo logo">Telegram Web Apps</p>
-		<a class="btn" href="scripts/1.html">Script 1</a>
-		<a class="btn" href="scripts/2.html">Script 2</a>
-		<a class="btn" href="scripts/3.html">Script 3</a>
-		<a class="btn" href="scripts/4.html">Script 4</a>
-		<a class="btn" href="scripts/5.html">Script 5</a>
-	</header>
-</div>
+	</header> -->
+	<div class="main  mt-5 p-5">
+		<h1>Кирилл, 21 год, Python Junior</h1>
+		<p>Опыт разработки на Python с 2020 года.
+В 2020-2022 - я выполнял различные фриланс заказы по разработке телеграмм ботов на Python, различных скриптов автоматизации и парсинга на Python, чат ботов Вконтакте на Python.
+С 2022 и до сих пор занимаюсь преимущественно разработкой телеграмм ботов.
+		</p>
+		<p>
+В число моих рабочих задач входит: разработка/доработка ботов в телеграмм, деплой ботов на сервер, администрирование нашего веб-сервера с Ubuntu на борту и порядка 2000+ телеграмм ботов работающих на нём, также иногда - создание простых приложений на Django и их деплой на наш сервер.
+Все задачи связанные с разработкой и реализацией заказов клиентов выполняю я уже более двух лет.
+		</p>
+	</div>
+
+	<div class="main p-5">
+		<h1>Технологии</h1>
+
+		<p>
+В основном при разработке использовался спек - pyTelegramBotApi(Telebot) и базы данных Sqlite3 + различные библиотеки/Api в зависимости от запросов клиентов.
+Из опыта реализации взаимодействий с Api - Yookassa, RapidApi, CDEK Api, Openai, leadpay.ru, Tinkoff Pay и многие другие.
+На Django есть опыт написания приложения сокращателя URL с интеграцией в чат-бота телеграмм.
+		</p>
+
+		<div class="specs">
+			<a class="btn" href="https://www.python.org/">Python</a>
+			<a class="btn" href="https://pypi.org/project/pyTelegramBotAPI/">Telebot</a>
+			<a class="btn" href="https://www.sqlite.org/">SQLite3</a>
+			<a class="btn" href="https://www.djangoproject.com/">Django</a>
+		</div>
+
+	</div>
+	<div class="possible p-5">
+		<h1>Реализации функционала в Telegram</h1>
+<p>1)Все чат-боты имеют встроенную админ панель внутри бота из функционала - рассылки, выгрузка статистики в различных форматах, блокировка пользователей, статистика нажатий по кнопкам..</p>
+
+<p>2)Сегментированные рассылки и контент, есть несколько кейсов мультиязычных чат-ботов.</p>
+
+<p>3)Чат-боты конструкторы, с админ панелью в которой можно редактировать контент.</p>
+
+<p>4)Чат-боты для групп(автоматическое приветствие в группе, удаление спам ссылок, удаление пользователей с арабскими именами, удаление системных сообщений и т.д).</p>
+
+<p>5)Чат-бот позволяющий скачивать видео из TikTok, YouTube Shorts, VK Clips.</p>
+
+<p>6)Простой чат-бот позволяющий переводить текст на несколько языков посредством бесплтаного API.</p>
+
+<p>7)Много чат-ботов с различными реферальными системами, в том числе многоуровневыми, с системой внутреннего кошелька.</p>
+
+<p>8)Различные игровые воронки в чат-ботах.</p>
+
+<p>9)Небольшой опыт в Telegram WebApps.</p>
+
+<p>10)Использование различных Middlewares в ботах (например для реализации черного списка).</p>
+
+Это наиболее интересные реализации, полный список созданных ботов включает около 2000 телеграмм чат-ботов.
+</p>
+
+	</div>
+	<div class="main p-5">
+		<h1>Успешные Кейсы</h1>
+
+		<div class="cases_links">
+			<a class="btn" href="https://t.me/General_Stairs_Up_bot">@General_Stairs_Up_bot - автоматизированная система рекрутинга на четырёх языках</a>
+			<a class="btn" href="https://t.me/Unic_service_bot">@Unic_service_bot - бот сервиса автопродаж самонастраиваемых телеграмм ботов</a>
+			<a class="btn" href="https://t.me/cut1_partnerbot">@cut1_partnerbot - бот системы сокращения ссылок на домене partcut.ru</a>
+			<a class="btn" href="https://t.me/Best_People_2_bot">@Best_People_2_bot - система автоматизации команды #ЛучшиеЛюди и отдельный бот-каталог</a>
+			<a class="btn" href="https://t.me/Best_Mandarin_Courses_bot">@Best_Mandarin_Courses_bot - бот-курс по китайскому языку с оплатой и реферальной системой внутри</a>
+			<a class="btn" href="https://t.me/mi11ion_partnerbot">@mi11ion_partnerbot - бот-воронка сервиса заработка на партнерских системах с реферальной программой</a>
+			<a class="btn" href="https://t.me/Zinovi_Pro_Bot">@Zinovi_Pro_Bot - бот о компании Atomy доступный на 7 языка </a>
+			<a class="btn" href="https://t.me/Dexx_Tehnology_bot">@Dexx_Tehnology_bot - система автоматизации DexNet с реферальной системой, доступная на 5 языках</a>
+			<a class="btn" href="https://t.me/SX_100_Exclusive_bot">Система автоматизации продаж чат-ботов сервиса SX_100 и все боты, что можно там увидеть</a>
+			<a class="btn" href="https://t.me/Serebrisimo_bot">@Serebrisimo_bot - бот-магазин с функционалом корзины, калькулятором доставки и подгрузкой каталога</a>
+
+		</div>
+		
 
 </body>
 
