--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>BOT44HQ</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 
 </head>
 <body>
@@ -91,7 +93,6 @@
 
 </body>
 
-<script type="">
-	//window.alert("Привет мир!");
-</script>
+<script src="index.js"></script>
+
 </html>
