--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<a class=" btn" href="mailto:kolosoek86@gmail.com">kolosoek86@gmail.com</a>
 
 	</header> -->
-	<div class="main  mt-5 p-5">
+	<div class="main p-5">
 		<h1>Кирилл, 21 год, Python Junior</h1>
 		<p>Опыт разработки на Python с 2020 года.
 В 2020-2022 - я выполнял различные фриланс заказы по разработке телеграмм ботов на Python, различных скриптов автоматизации и парсинга на Python, чат ботов Вконтакте на Python.
