--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 </p>
 
 	</div>
+	<br>
 	<div class="main p-5">
 		<h1>Успешные Кейсы</h1>
 
@@ -85,7 +86,7 @@
 			<a class="btn" href="https://t.me/mi11ion_partnerbot">@mi11ion_partnerbot - бот-воронка сервиса заработка на партнерских системах с реферальной программой</a>
 			<a class="btn" href="https://t.me/Zinovi_Pro_Bot">@Zinovi_Pro_Bot - бот о компании Atomy доступный на 7 языка </a>
 			<a class="btn" href="https://t.me/Dexx_Tehnology_bot">@Dexx_Tehnology_bot - система автоматизации DexNet с реферальной системой, доступная на 5 языках</a>
-			<a class="btn" href="https://t.me/SX_100_Exclusive_bot">Система автоматизации продаж чат-ботов сервиса SX_100 и все боты, что можно там увидеть</a>
+			<a class="btn" href="https://t.me/SX_100_Exclusive_bot">Система автоматизации продаж чат-ботов сервиса SX_100 и все боты, которые можно там увидеть</a>
 			<a class="btn" href="https://t.me/Serebrisimo_bot">@Serebrisimo_bot - бот-магазин с функционалом корзины, калькулятором доставки и подгрузкой каталога</a>
 
 		</div>
