--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 			<a class="btn" href="https://www.sqlite.org/">SQLite3</a>
 			<a class="btn" href="https://www.djangoproject.com/">Django</a>
 		</div>
+		<div class="specs">
+			<a class="btn" href="https://www.python.org/">Unix</a>
+			<a class="btn" href="https://pypi.org/project/pyTelegramBotAPI/">GIT</a>
+			<a class="btn" href="https://www.sqlite.org/">123</a>
+			<a class="btn" href="https://www.djangoproject.com/">321</a>
+		</div>
 
 	</div>
 	<div class="possible p-5">
