--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 Из опыта реализации взаимодействий с Api - Yookassa, RapidApi, CDEK Api, Openai, leadpay.ru, Tinkoff Pay и многие другие.
 На Django есть опыт написания приложения сокращателя URL с интеграцией в чат-бота телеграмм.
 		</p>
-
+		<div class="specs_grid">
 		<div class="specs">
 			<a class="btn" href="https://www.python.org/">Python</a>
 			<a class="btn" href="https://pypi.org/project/pyTelegramBotAPI/">Telebot</a>
@@ -51,7 +51,7 @@
 			<a class="btn" href="https://www.sqlite.org/">123</a>
 			<a class="btn" href="https://www.djangoproject.com/">321</a>
 		</div>
-
+	</div>
 	</div>
 	<div class="possible p-5">
 		<h1>Реализации функционала в Telegram</h1>
