styles and new percs

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 			<a class="btn" href="https://www.djangoproject.com/">Django</a>
 		</div>
 		<div class="specs">
-			<a class="btn" href="https://www.python.org/">Unix</a>
-			<a class="btn" href="https://pypi.org/project/pyTelegramBotAPI/">GIT</a>
-			<a class="btn" href="https://www.sqlite.org/">123</a>
-			<a class="btn" href="https://www.djangoproject.com/">321</a>
+			<a class="btn" href="https://ubuntu.com/">Ubuntu</a>
+			<a class="btn" href="https://git-scm.com/">GIT</a>
+			<a class="btn" href="https://docs.pyrogram.org/">Pyrogram</a>
+			<a class="btn" href="https://flask.palletsprojects.com/en/3.0.x/">Flask</a>
 		</div>
 	</div>
 	</div>
