add percs and update percs positions

--- a/index.html
+++ b/index.html
@@ -43,13 +43,16 @@
 			<a class="btn" href="https://www.python.org/">Python</a>
 			<a class="btn" href="https://pypi.org/project/pyTelegramBotAPI/">Telebot</a>
 			<a class="btn" href="https://www.sqlite.org/">SQLite3</a>
-			<a class="btn" href="https://www.djangoproject.com/">Django</a>
 		</div>
 		<div class="specs">
+			<a class="btn" href="https://www.djangoproject.com/">Django</a>
 			<a class="btn" href="https://ubuntu.com/">Ubuntu</a>
 			<a class="btn" href="https://git-scm.com/">GIT</a>
+		</div>
+		<div class="specs">
 			<a class="btn" href="https://docs.pyrogram.org/">Pyrogram</a>
 			<a class="btn" href="https://flask.palletsprojects.com/en/3.0.x/">Flask</a>
+			<a class="btn" href="https://vkbottle.readthedocs.io/ru/latest/">VKBottle</a>
 		</div>
 	</div>
 	</div>
