some updates in visual

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<a class=" btn" href="mailto:kolosoek86@gmail.com">kolosoek86@gmail.com</a>
 
 	</header> -->
-	<div class="main p-5">
+	<div class="main p-4">
 		<h1>Кирилл, 21 год, Python Junior</h1>
 		<p>Опыт разработки на Python с 2020 года.
 В 2020-2022 - я выполнял различные фриланс заказы по разработке телеграмм ботов на Python, различных скриптов автоматизации и парсинга на Python, чат ботов Вконтакте на Python.
@@ -30,7 +30,7 @@
 		</p>
 	</div>
 
-	<div class="main p-5">
+	<div class="main p-4">
 		<h1>Технологии</h1>
 
 		<p>
@@ -83,20 +83,22 @@
 
 	</div>
 	<br>
-	<div class="main p-5">
+	<div class="main p-4">
 		<h1>Успешные Кейсы</h1>
 
 		<div class="cases_links">
-			<a class="btn" href="https://t.me/General_Stairs_Up_bot">@General_Stairs_Up_bot - автоматизированная система рекрутинга на четырёх языках</a>
-			<a class="btn" href="https://t.me/Unic_service_bot">@Unic_service_bot - бот сервиса автопродаж самонастраиваемых телеграмм ботов</a>
-			<a class="btn" href="https://t.me/cut1_partnerbot">@cut1_partnerbot - бот системы сокращения ссылок на домене partcut.ru</a>
-			<a class="btn" href="https://t.me/Best_People_2_bot">@Best_People_2_bot - система автоматизации команды #ЛучшиеЛюди и отдельный бот-каталог</a>
-			<a class="btn" href="https://t.me/Best_Mandarin_Courses_bot">@Best_Mandarin_Courses_bot - бот-курс по китайскому языку с оплатой и реферальной системой внутри</a>
-			<a class="btn" href="https://t.me/mi11ion_partnerbot">@mi11ion_partnerbot - бот-воронка сервиса заработка на партнерских системах с реферальной программой</a>
-			<a class="btn" href="https://t.me/Zinovi_Pro_Bot">@Zinovi_Pro_Bot - бот о компании Atomy доступный на 7 языка </a>
-			<a class="btn" href="https://t.me/Dexx_Tehnology_bot">@Dexx_Tehnology_bot - система автоматизации DexNet с реферальной системой, доступная на 5 языках</a>
-			<a class="btn" href="https://t.me/SX_100_Exclusive_bot">Система автоматизации продаж чат-ботов сервиса SX_100 и все боты, которые можно там увидеть</a>
-			<a class="btn" href="https://t.me/Serebrisimo_bot">@Serebrisimo_bot - бот-магазин с функционалом корзины, калькулятором доставки и подгрузкой каталога</a>
+				<a class="btn" href="https://t.me/General_Stairs_Up_bot">@General_Stairs_Up_bot - автоматизированная система рекрутинга на четырёх языках</a>
+				<a class="btn" href="https://t.me/Unic_service_bot">@Unic_service_bot - бот сервиса автопродаж самонастраиваемых телеграмм ботов</a>
+
+				<a class="btn" href="https://t.me/cut1_partnerbot">@cut1_partnerbot - бот системы сокращения ссылок на домене partcut.ru</a>
+				<a class="btn" href="https://t.me/Best_People_2_bot">@Best_People_2_bot - система автоматизации команды #ЛучшиеЛюди и отдельный бот-каталог</a>
+
+				<a class="btn" href="https://t.me/Best_Mandarin_Courses_bot">@Best_Mandarin_Courses_bot - бот-курс по китайскому языку с оплатой и реферальной системой внутри</a>
+				<a class="btn" href="https://t.me/mi11ion_partnerbot">@mi11ion_partnerbot - бот-воронка сервиса заработка на партнерских системах с реферальной программой</a>
+				<a class="btn" href="https://t.me/Zinovi_Pro_Bot">@Zinovi_Pro_Bot - бот о компании Atomy доступный на 7 языках </a>
+				<a class="btn" href="https://t.me/Dexx_Tehnology_bot">@Dexx_Tehnology_bot - система автоматизации DexNet с реферальной системой, доступная на 5 языках</a>
+				<a class="btn" href="https://t.me/SX_100_Exclusive_bot">Система автоматизации продаж чат-ботов сервиса SX_100 и все боты, которые можно там увидеть</a>
+				<a class="btn" href="https://t.me/Serebrisimo_bot">@Serebrisimo_bot - бот-магазин с функционалом корзины, калькулятором доставки и подгрузкой каталога</a>
 
 		</div>
 		
