--- a/random.html
+++ b/random.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Randomizer</title>
 	
+	<link rel="stylesheet" type="text/css" href="random.css">
 	<link href="
 	https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	
 	
-	<link rel="stylesheet" type="text/css" href="random.css">
 </head>
 <body>
 
@@ -19,7 +19,7 @@
 		Random Generator
 		<input id="min" type="text" name="From">
 		<input id="max"type="text" name="To">
-		<div id="random_number"></div>
+		<div id="random_number">0</div>
 		<button id="generate" class="btn">Generate</button>
 	</form>
 	<script src="random.js"></script>
