--- a/random.html
+++ b/random.html
@@ -10,19 +10,18 @@
 	<link href="
 	https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	
-	<script src="random.js"></script>
 	
 	
 </head>
 <body>
-
-	<form class="random_form m-5 p-5" onsubmit="return false">
+	<div class="random_form m-5 p-5">
 		Random Generator
 		<input id="min" type="text" name="From">
 		<input id="max"type="text" name="To">
 		<div id="random_number">0</div>
 		<button id="generate" class="btn">Generate</button>
-	</form>
+	</div>
 	
 </body>
+	<script src="random.js"></script>
 </html>
