some errors, but okay

--- a/random.html
+++ b/random.html
@@ -14,7 +14,7 @@
 	
 </head>
 <body>
-	<div class="random_form m-5 p-5">
+	<div class="random_form p-5">
 		Random Generator
 		<input id="min" type="text" name="From">
 		<input id="max"type="text" name="To">
