add placeholders to input

--- a/random.html
+++ b/random.html
@@ -16,8 +16,8 @@
 <body>
 	<div class="random_form p-5">
 		Random Generator
-		<input id="min" type="text" name="From">
-		<input id="max"type="text" name="To">
+		<input id="min" type="text" name="From" placeholder="From number">
+		<input id="max"type="text" name="To" placeholder="To number">
 		<div id="random_number">0</div>
 		<button id="generate" class="btn">Generate</button>
 	</div>
