replace input field to textarea

--- a/gpt.html
+++ b/gpt.html
@@ -10,13 +10,12 @@
 	<link rel="stylesheet" type="text/css" href="gpt.css">
 
 	
-	
-	
 </head>
 <body>
 	<div class="ask_form p-5">
 		Chat GPT
-		<input id="prompt" type="text" name="prompt" placeholder="Ask your question">
+<!-- 		<input id="prompt" type="text" name="prompt" placeholder="Ask your question"> -->
+<textarea id="prompt" name="prompt" placeholder="Ask your question" rows="4" cols="23"></textarea>
 		<button id="generate" class="btn">Generate</button>
 		<div class="p-5 my-4" id="answer"></div>
 	</div>
