Delete links and hide backButton

--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
 		</p>
 		<div class="specs_grid">
 		<div class="specs">
-			<a class="btn" href="https://www.python.org/">Python</a>
-			<a class="btn" href="https://pypi.org/project/pyTelegramBotAPI/">Telebot</a>
-			<a class="btn" href="https://www.sqlite.org/">SQLite3</a>
+			<a class="btn" href="#">Python</a>
+			<a class="btn" href="#">Telebot</a>
+			<a class="btn" href="#">SQLite3</a>
 		</div>
 		<div class="specs">
-			<a class="btn" href="https://www.djangoproject.com/">Django</a>
-			<a class="btn" href="https://ubuntu.com/">Ubuntu</a>
-			<a class="btn" href="https://git-scm.com/">GIT</a>
+			<a class="btn" href="#">Django</a>
+			<a class="btn" href="#">Ubuntu</a>
+			<a class="btn" href="#">GIT</a>
 		</div>
 		<div class="specs">
-			<a class="btn" href="https://docs.pyrogram.org/">Pyrogram</a>
-			<a class="btn" href="https://flask.palletsprojects.com/en/3.0.x/">Flask</a>
-			<a class="btn" href="https://vkbottle.readthedocs.io/ru/latest/">VKBottle</a>
+			<a class="btn" href="#">Pyrogram</a>
+			<a class="btn" href="#">Flask</a>
+			<a class="btn" href="#">VKBottle</a>
 		</div>
 	</div>
 	</div>
