Delete all href in links

--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
 
 </head>
 <body>
-<!-- 	<header class="header fixed-top px-5 p-2">
-		<a class="mylogo logo" href="#">Kolomiets Kirill</a>
-		<a class=" btn" href="https://t.me/hqwskq">Telegram</a>
-		<a class=" btn" href="tel:+79210135075">+7-921-013-50-75</a>
-		<a class=" btn" href="mailto:kolosoek86@gmail.com">kolosoek86@gmail.com</a>
-
-	</header> -->
 	<div class="main p-4">
 		<h1>Кирилл, 21 год, Python Junior</h1>
 		<p>Опыт разработки на Python с 2020 года.
@@ -40,19 +33,19 @@
 		</p>
 		<div class="specs_grid">
 		<div class="specs">
-			<a class="btn" href="#">Python</a>
-			<a class="btn" href="#">Telebot</a>
-			<a class="btn" href="#">SQLite3</a>
+			<p class="btn" >Python</p>
+			<p class="btn" >Telebot</p>
+			<p class="btn" >SQLite3</p>
 		</div>
 		<div class="specs">
-			<a class="btn" href="#">Django</a>
-			<a class="btn" href="#">Ubuntu</a>
-			<a class="btn" href="#">GIT</a>
+			<p class="btn" >Django</p>
+			<p class="btn" >Ubuntu</p>
+			<p class="btn" >GIT</p>
 		</div>
 		<div class="specs">
-			<a class="btn" href="#">Pyrogram</a>
-			<a class="btn" href="#">Flask</a>
-			<a class="btn" href="#">VKBottle</a>
+			<p class="btn" >Pyrogram</p>
+			<p class="btn" >Flask</p>
+			<p class="btn" >VKBottle</p>
 		</div>
 	</div>
 	</div>
