add password copy button and update buttons styles

--- a/passwords.html
+++ b/passwords.html
@@ -23,7 +23,12 @@
 		</div>
 		<div id="generate" class="button">Generate</div>
 
-		<div id="password"></div>
+		<div class="password_container">
+			<p id="password">Click the button!</p>
+			<div id="copy" class="button">Copy to clipboard</div>	
+		</div>
+
+
 	</div>
 </body>
 	<script src="passwords.js"></script>
