Change som info in resume texts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xxanax's Resume</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
                 <span class="terminal-button yellow"></span>
                 <span class="terminal-button green"></span>
             </div>
-            <div class="terminal-title">kirill@resume: ~</div>
+            <div class="terminal-title">xxanax@resume: ~</div>
         </div>
         <div class="terminal-body" id="terminal">
             <div id="output"></div>
