update resume text and add skills info

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span class="terminal-button minimize"></span>
                 <span class="terminal-button maximize"></span>
             </div>
-            <div class="terminal-title">resume.exe</div>
+            <div class="terminal-title">resume.txt</div>
         </div>
         <div class="terminal-body" id="terminal">
             <div class="terminal-line">$ <span class="typed-text"></span><span class="cursor">|</span></div>
